--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.26",
+    "autoprefixer": "^10.4.8",
     "next": "12.2.5",
+    "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.1.26",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@types/node": "18.7.10",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "typescript": "4.7.4"
