--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.1.26",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "watch": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "18.7.10",
