--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.8",
+    "babel-plugin-styled-components": "^2.0.7",
     "next": "12.2.5",
     "postcss": "^8.4.16",
     "react": "18.2.0",
