--- a/package.json
+++ b/package.json
@@ -9,23 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.8",
-    "babel-plugin-styled-components": "^2.0.7",
     "next": "12.2.5",
     "postcss": "^8.4.16",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "styled-components": "^5.1.26",
-    "tailwindcss": "^3.1.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5",
     "watch": "^1.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.13",
+    "@babel/plugin-transform-react-jsx": "^7.18.10",
     "@types/node": "18.7.10",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "tailwindcss": "^3.1.8",
+    "twin.macro": "^2.8.2",
     "typescript": "4.7.4"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
   }
 }
