--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prebuild": "tailwindcss-cli build -o styles/tailwindSSR.css"
   },
   "dependencies": {
     "autoprefixer": "^10.4.8",
@@ -16,8 +17,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.1.26",
+    "tailwind-styled-components": "^2.1.8",
     "tailwindcss": "^3.1.8",
-    "watch": "^1.0.2"
+    "watch": "^0.13.0"
   },
   "devDependencies": {
     "@types/node": "18.7.10",
@@ -26,6 +28,8 @@
     "@types/styled-components": "^5.1.26",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "raw-loader": "^4.0.2",
+    "tailwindcss-cli": "^0.1.2",
     "typescript": "4.7.4"
   }
 }
