--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prebuild": "tailwindcss-cli build -o styles/tailwindSSR.css"
+    "prebuild": "tailwindcss-cli build -o styles/tailwindSSR.css --minify"
   },
   "dependencies": {
     "autoprefixer": "^10.4.8",
